* ext/pty/pty.c (get_device_once): delay rb_fd_set_cloexec() until   grantpt() on Solaris.  grantpt() doesn't work with CLOEXEC on   Solaris 10.   reported by Naohisa GOTO.  [ruby-dev:44688] [Bug #5475]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33519 b2dd03c8-39d4-4d8f-98ff-823fe69b080e