ext/pty/pty.c
@@ -290,10 +290,18 @@ get_device_once(int *master, int *slave, char SlaveName[DEVICELEN], int nomesg, 
     dfl.sa_flags = 0;
     sigemptyset(&dfl.sa_mask);
 
+#if defined(__sun)
+    /* workaround for Solaris 10: grantpt() doesn't work if FD_CLOEXEC is set.  [ruby-dev:44688] */
+    if ((masterfd = posix_openpt(O_RDWR|O_NOCTTY)) == -1) goto error;
+    if (sigaction(SIGCHLD, &dfl, &old) == -1) goto error;
+    if (grantpt(masterfd) == -1) goto grantpt_error;
+    rb_fd_set_cloexec(masterfd);
+#else
     if ((masterfd = posix_openpt(O_RDWR|O_NOCTTY)) == -1) goto error;
     rb_fd_set_cloexec(masterfd);
     if (sigaction(SIGCHLD, &dfl, &old) == -1) goto error;
     if (grantpt(masterfd) == -1) goto grantpt_error;
+#endif
     if (sigaction(SIGCHLD, &old, NULL) == -1) goto error;
     if (unlockpt(masterfd) == -1) goto error;
     if ((slavedevice = ptsname(masterfd)) == NULL) goto error;
@@ -365,10 +373,18 @@ get_device_once(int *master, int *slave, char SlaveName[DEVICELEN], int nomesg, 
     extern int unlockpt(int);
     extern int grantpt(int);
 
+#if defined(__sun)
+    /* workaround for Solaris 10: grantpt() doesn't work if FD_CLOEXEC is set.  [ruby-dev:44688] */
+    if((masterfd = open("/dev/ptmx", O_RDWR, 0)) == -1) goto error;
+    s = signal(SIGCHLD, SIG_DFL);
+    if(grantpt(masterfd) == -1) goto error;
+    rb_fd_set_cloexec(masterfd);
+#else
     if((masterfd = open("/dev/ptmx", O_RDWR, 0)) == -1) goto error;
     rb_fd_set_cloexec(masterfd);
     s = signal(SIGCHLD, SIG_DFL);
     if(grantpt(masterfd) == -1) goto error;
+#endif
     signal(SIGCHLD, s);
     if(unlockpt(masterfd) == -1) goto error;
     if((slavedevice = ptsname(masterfd)) == NULL) goto error;
